src/style.css
/* ... */
.fs-sm {font-size: var(--fs-500);}
.fs-md {font-size: var(--fs-600);}
.fs-lrg {font-size: var(--fs-700);}
.fs-hero-form-lrg {font-size: var(--fs-hero-form-700);}
.fs-xlrg {font-size: var(--fs-800);}
.fs-xxlrg {font-size: var(--fs-900);}
.fs-hero-form-xxlrg {font-size: var(--fs-hero-form-900);}

/* font-size - purpose section */
.purpose-text-sm {
    --purpose-text-sm: clamp(1.75rem, 3vw, 3rem);

    font-size: var(--purpose-text-sm);
    line-height: var(--purpose-text-sm);
}

.purpose-text-md {
    --purpose-text-md: clamp(2rem, 5vw, 4rem);

    font-size: var(--purpose-text-md);
    line-height: var(--purpose-text-md);
}

.purpose-text-lrg {
    --purpose-text-lrg: clamp(2.27rem, 5vw, 5rem);

    font-size: var(--purpose-text-lrg);
    line-height: var(--purpose-text-lrg);
}

/* line-height */
.lh-sm {line-height: var(--fs-700);}
.lh-md {line-height: var(--fs-900);}

/* text color */
.text-white {color: var(--clr-white);}
.text-black {color: var(--clr-black);}
.text-blue {color: var(--clr-blue);}
.text-yellow {color: var(--clr-yellow);}
.text-grey {color: var(--clr-grey);}
.text-teal {color: var(--clr-teal);}

/* background color */
.bg-white {background-color: var(--clr-white);}
.bg-blue {background-color: var(--clr-blue);}
.bg-yellow {background-color: var(--clr-yellow);}
.bg-grey {background-color: var(--clr-grey);}

/* general typography classes */
.text-left {
    text-align: left;
}

.heading-2 {
    font-family: var(--ff-heading);
    font-size: var(--fs-600);
    margin-block-end: 1.5rem;
    -webkit-margin-after: 1.5rem;
}

.heading-3 {
    font-family: var(--ff-heading);
    font-size: var(--fs-500);
    margin-block-end: .5rem;
    -webkit-margin-after: .5rem;
}

.intro-text {
    font-size: var(--fs-400);
    margin-block-end: 3rem;
    -webkit-margin-after: 3rem;
}

/* margin-left */
.ml-sm {margin-inline-start: 1rem;}
.ml-md {margin-inline-start: 2rem;}
.ml-lrg {margin-inline-start: 3rem;}
.ml-xlrg {margin-inline-start: 6rem;}

/* margin-top */
.mt-xsm {
    margin-block-start: 1rem;
    -webkit-margin-before: 1rem;
}

/* margin-bottom */
.mb-md {
    margin-block-end: 3rem;
    -webkit-margin-after: 3rem;
}

/* Reset */
*,
*::before,
*::after {
    box-sizing: border-box;
}

html {
    -moz-text-size-adjust: none;
    -webkit-text-size-adjust: none;
    text-size-adjust: none;
    overflow-y: scroll;
}

body, h1, h2, h3, h4, p {
    margin: 0;
}

ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

body {
    font-family: var(--ff-body), sans-serif;
    min-height: 100vh;
    line-height: 1.5;
}

h1, h2, h3, h4,
button, input, label {
    line-height: 1.1;
}

h1, h2,
h3, h4 {
    text-wrap: balance;
}

h2, h3 {
    letter-spacing: 0px;
}

a {
    text-decoration: none;
    color: var(--clr-blue);
}

a:visited():not(a.button) {
    color: var(--clr-blue);
}

img,
picture {
    max-width: 100%;
    height: auto;
    display: block;
}

input, button, select {
    font: inherit;
}

/* General Utility Classes */
/* visibility */
.hidden {
    display: none;
    visibility: hidden;
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

/* Layout Classes */
.main-column-narrow {
    padding-block: 5rem;
    -webkit-padding-before: 5rem;
    -webkit-padding-after: 5rem;
    text-align: center;
    display: grid;
    grid-template-columns: 
        minmax(1rem, 1fr)
        minmax(0, 49em)
        minmax(1rem, 1fr);
}

.main-column-narrow > * {
    grid-column: 2 / 3;
}

.main-column-wide {
    padding-block: 5rem;
    -webkit-padding-before: 5rem;
    -webkit-padding-after: 5rem;
    display: grid;
    grid-template-columns: 
        minmax(1rem, 1fr) 
        minmax(0, 45rem) 
        minmax(0, 45rem) 
        minmax(1rem, 1fr);
    text-align: center;
}
 
.main-column-wide > * {
    grid-column: 2 / 4;
}

/* Header Styles */
.logo {
    padding: 2em;
    display: grid;
    place-items: center;
}

/* Inquiry Forms Styles */
/* .form class is in the hero-with-form template only */
.form {
    padding: 2rem 1rem;
    border-radius: 16px;
    max-width: 500px;
}

.form .intro-text {
    max-width: 35ch;
    text-align: center;
    margin: 0 auto 1.75rem;
}

.form button.default.form_button_submit {
    margin-top: 1rem
}

input:not(.form_response > input), 
label:not(.form_response > label), 
select {
    border: none;
    border-radius: 2rem;
    padding: .5em 1em;
    width: 100%;
    color: var(--clr-black);
    -webkit-text-fill-color: var(--clr-black);
}

input, select {
    background-color: var(--clr-white);
}

select {
    appearance: none;
    -webkit-appearance: none;
    background-image: url('/assets/images/icon-select-arrow.svg');
    background-position: right 1rem center;
    background-repeat: no-repeat;
    background-size: 1rem;
}

input:focus-visible, 
select:focus-visible ,
button.default.form_button_submit:focus-visible, 
.button:focus-visible {
	border-color: #86b7fe;
	box-shadow: 0 0 0 0.25rem rgba(13,110,253,.25);
	outline: 0;
}

input::placeholder, 
label::placeholder {
    color: var(--clr-black);
}

.form_question.form_textarea label {
    text-align: left;
    padding-left: 0;

}

textarea {
    width: 100%;
    border-radius: 5px;
    border: none;
    padding: 1rem .5rem;
}

fieldset .form_label {
    text-align: left;
}

button.default.form_button_submit, 
.button {
    border: none;
    border-radius: 2rem;
    padding: .5em 2em;
    font-weight: 600;
    text-transform: uppercase;
    color: var(--clr-white);
    background-color: var(--clr-blue);
    margin-block-start: 2rem;
    -webkit-margin-before: 2rem;
}

button.default.form_button_submit:hover, 
button.default.form_button_submit:focus-visible, 
.button:hover {
    background-color: var(--clr-blue);
    color: var(--clr-yellow);
    padding: .5em 2em;
} 

.form_responses {
    display: flex;
    gap: 2rem;
    justify-content: start;
}
/* ... */

